<resources>
    <string name="app_name">AS_KOTLIN</string>
    <string name="no_movies_available">Nenhum filme disponível</string>
    <string name="director">Diretor:</string>
    <string name="release_year">Ano de Lançamento:</string>
    <string name="synopsis">Sinopse:</string>
    <string name="movie_removed">%1$s removido da lista</string>
    <string name="movie_title">Título</string>
    <string name="movie_director">Diretor</string>
    <string name="movie_year">Ano de Lançamento</string>
    <string name="movie_synopsis">Sinopse</string>
    <string name="save">Salvar</string>
    <string name="add_movie">Adicionar Filme</string>
    <string name="edit_movie">Editar Filme</string>
    <string name="edit">Editar</string>
    <string name="delete_movie">Excluir Filme</string>
    <string name="confirm_delete">Deseja realmente excluir este filme?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
</resources>